welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (x >= 0){
  ^